Added about section

--- a/landing/index.html
+++ b/landing/index.html
@@ -66,6 +66,12 @@
         <div class="one-half column value">
            <h2 class="friend">Introduce me!</h2>
           <p class="about">Tell me your friend's name, I will go meet them!</p>
+            <form action="">
+          <fieldset>
+            <input type="text" name="twitter" value="@TwitterHandle"><br>
+            <input type="submit" value="Submit">
+          </fieldset>
+        </form>
         </div>
         <div class="one-half column value">
               <h2 class="friend">My latest friend!</h2>
@@ -77,7 +83,7 @@
 
     <div class="section about-me">
     <div class="container">
-      <h3 class="about-heading">About Me!</h3>
+      <h3 class="friend">About Me!</h3>
       <p class="about-description">This is what I do!</p>
       <a class="button button-primary" href="http://twitter.com/iambellebot">Come Visit Me!</a>
     </div>
